Adds postgres db setup

--- a/springboot-employee-microservice/src/main/resources/application.properties
+++ b/springboot-employee-microservice/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=springboot-employee-microservice
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_employee_microservice
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.root=info
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=info
+logging.level.web=info
+logging.level.tomcat=trace
