--- a/springboot-employee-microservice/src/main/resources/application.properties
+++ b/springboot-employee-microservice/src/main/resources/application.properties
@@ -14,3 +14,5 @@ logging.level.org.springframework.web=info
 logging.level.org.hibernate=info
 logging.level.web=info
 logging.level.tomcat=trace
+
+server.port=8081
