Implements microservice communication between employee and department service via WebFlux

--- a/springboot-employee-microservice/pom.xml
+++ b/springboot-employee-microservice/pom.xml
@@ -59,6 +59,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webflux -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webflux</artifactId>
+			<version>6.1.13</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
