--- a/springboot-department-microservice/src/main/resources/application.properties
+++ b/springboot-department-microservice/src/main/resources/application.properties
@@ -14,3 +14,6 @@ logging.level.org.springframework.web=info
 logging.level.org.hibernate=info
 logging.level.web=info
 logging.level.tomcat=trace
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.instance.preferIpAddress=true
