Registers the employee service as a Eureka client

--- a/springboot-employee-microservice/src/main/resources/application.properties
+++ b/springboot-employee-microservice/src/main/resources/application.properties
@@ -16,3 +16,6 @@ logging.level.web=info
 logging.level.tomcat=trace
 
 server.port=8081
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.instance.preferIpAddress=true
