--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 spring.application.name=api-gateway
-
 server.port=9191
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+management.endpoints.web.exposure.exclude=*
+
+## Routes for Employee Service
+spring.cloud.gateway.routes[0].id=SPRINGBOOT-EMPLOYEE-MICROSERVICE
+spring.cloud.gateway.routes[0].uri=lb://SPRINGBOOT-EMPLOYEE-MICROSERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
+
+## Routes for Department Service
+spring.cloud.gateway.routes[1].id=SPRINGBOOT-DEPARTMENT-MICROSERVICE
+spring.cloud.gateway.routes[1].uri=lb://SPRINGBOOT-DEPARTMENT-MICROSERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
