--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.port=9191
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.exclude=*
 
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
+
 ## Routes for Employee Service
 spring.cloud.gateway.routes[0].id=SPRINGBOOT-EMPLOYEE-MICROSERVICE
 spring.cloud.gateway.routes[0].uri=lb://SPRINGBOOT-EMPLOYEE-MICROSERVICE
